<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>pt.ulisboa.tecnico</groupId>
  <artifactId>milestone1</artifactId>

  <properties>
    <java.version>1.8</java.version>
    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
  </properties>

  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>milestone1</name>
  <url>http://maven.apache.org</url>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <sourceDirectory>src/</sourceDirectory>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
	    			<artifactId>maven-compiler-plugin</artifactId>
	    			<version>${maven-compiler-plugin.version}</version>
	    			<configuration>
	    				<source>${java.version}</source>
	    				<target>${java.version}</target>
	    			</configuration>
      </plugin>
    </plugins>
  </build>
</project>
